force-app/main/default/objects/Pack__c/Pack__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Pack</label>
</CustomObject>