force-app/main/default/objects/Pack__c/fields/ConsumoMax__c.field-meta.xml
<CustomField>
    <fullName>ConsumoMax__c</fullName>
    <label>ConsumoMax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>