force-app/main/default/objects/Pack__c/fields/ImporteMensual__c.field-meta.xml
<CustomField>
    <fullName>ImporteMensual__c</fullName>
    <label>ImporteMensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>